--- a/js/package.json
+++ b/js/package.json
@@ -13,5 +13,6 @@
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
-  }
+  },
+  "mode": "development"
 }
